<resources>
    <string name="app_name">KerjaAja</string>
    <string name="label_bottom_nav_home">Beranda</string>
    <string name="label_bottom_nav_history">Histori</string>
    <string name="label_bottom_nav_profile">Profil</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_job">Cari Job</string>
    <string name="content_desc_carousel_category">Kategori Korosel</string>
    <string name="label_category">Kategori</string>
    <string name="label_recommendation">Rekomendasi</string>
    <string name="content_desc_home_search_bar">Ketikan Job yang ingin dicari</string>
    <string name="content_desc_fab_home">Tekan untuk membuat job</string>
    <string name="label_fab_home">Buat Job</string>
    <string name="label_btn_detail">Detail</string>
    <string name="option_profile_1">Option One</string>
    <string name="option_profile_2">Option Two</string>
    <string name="tv_profile">Profile</string>
    <string name="user_name_profile">Name</string>
    <string name="tab_text_1">Tampilan</string>
    <string name="tab_text_2">Jobs</string>
    <string name="tab_text_3">Keamanan</string>
    <string name="profile_tabs">Profile Tabs</string>
    <string name="back_button">back</string>
    <string name="setting_tampilan">Setting</string>
    <string name="label_dialog_positive_button">Mengerti</string>
    <string name="title_menu_bookmark">Bookmark</string>
    <string name="content_desc_menu_bookmark">Bookmark</string>
    <string name="title_menu_chat">Chat</string>
    <string name="content_desc_menu_chat">Chatting</string>
    <string name="title_toolbar_detail_page">Detail Job</string>
    <string name="default_text_chip_region">Region</string>
    <string name="default_text_chip_category">Category</string>
    <string name="default_text_chip_applicants">Pelamar</string>
    <string name="label_creator">Pembuat</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_menu_notification">Notifikasi</string>
    <string name="content_desc_menu_notification">Notifikasi</string>
    <string name="title_toolbar_create_job">Buat Job</string>
    <string name="label_menu_create_job">Selesai</string>
    <string name="content_desc_menu_create_job">Tombol Selesai</string>
    <string name="content_desc_et_find_location">Cari Lokasi</string>
    <string name="helper_text_et_job_location">Lokasi job yang anda buat</string>
    <string name="label_et_job_location">Lokasi</string>
    <string name="helper_text_et_job_desc">Detail kegiatan dari job yang anda buat</string>
    <string name="label_et_job_desc">Deskripsi Job</string>
    <string name="content_desc_et_expire">pilih tanggal batas waktu</string>
    <string name="helper_text_et_expire">Setelah melewati batas waktu, job akan ditutup</string>
    <string name="label_et_expire">Batas Waktu</string>
    <string name="label_switch_enable_expire_feature">Tambahkan batas waktu?</string>
    <string name="content_desc_et_attachment">Lampirkan file</string>
    <string name="helper_text_et_attachment">Lampirkan beberapa file yang perlu dilihat pelamar</string>
    <string name="label_et_attachment">Lampiran</string>
    <string name="title_toolbar_history_page">Histori</string>
    <string name="content_desc_et_chat_attachment">Tambahkan file</string>
    <string name="label_et_chat">Ketik chat</string>
    <string name="title_toolbar_profile_page">Profil</string>
    <string name="title_toolbar_chat_page">Chat</string>
    <string name="title_toolbar_home_page">Home</string>
    <string name="title_toolbar_change_photo_profile">Ganti foto profile</string>
    <string name="title_toolbar_change_username">Ganti Username</string>
    <string name="helper_text_et_change_username">Silahkan mengisi username anda yang baru</string>
    <string name="title_toolbar_change_password">Ganti Password</string>
    <string name="label_et_old_password">Password Lama</string>
    <string name="helper_text_et_old_password">Silahkan mengisi password lama anda</string>
    <string name="label_et_new_password">Password Baru</string>
    <string name="helper_text_et_new_password">Silahkan mengisi password baru</string>
    <string name="label_et_confirm_new_password">Konfirmasi Password Baru</string>
    <string name="helper_text_et_confirm_new_password">Silahkan mengisi kembali password baru</string>
    <string name="choose_gallery">Gallery</string>
    <string name="choose_camera">Camera</string>
    <string name="label_menu_save">Simpan</string>
    <string name="title_toolbar_delete_account">Hapus Akun</string>
    <string name="tv_delete_helper">Anda akan kehilangan semua data, chat, dan history dari penggunaan aplikasi. Akun anda juga tidak akan bisa di kembalikan.</string>
    <string name="btn_delete_account">Hapus Akun Anda</string>
    <string name="title_toolbar_change_theme">Ganti Tema Aplikasi</string>
    <string name="tv_delete_question">Anda yakin ingin menghapus akun?</string>
    <string name="label_et_username">Username</string>
    <string name="error_text_password_etl">At least 8 character for password</string>
    <string name="error_text_confirm_password_etl">Password not match</string>
    <string name="label_dropdown_gender">Gender</string>
    <string name="label_et_full_name">Full Name</string>
    <string name="label_et_password">Password</string>
    <string name="label_et_password_confirm">Confirm Password</string>
    <string name="label_btn_register">Register</string>
    <string name="error_text_empty_text_field">This field cannot be empty</string>
    <string name="label_btn_login">Login</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="tv_login_title">Masuk</string>
    <string name="content_description_logo_image">Image Logo</string>
    <string name="tv_helper_change_profile_picture">Silahkan tekan foto untuk mengganti foto profile</string>
    <string name="tv_title_register">Registrasi</string>
    <string name="tv_helper_text_registration">Silahkan registrasi jika belum memiliki akun</string>
    <string name="helper_text_et_project_fee">Masukan nominalnya saja (ex: 1000000)</string>
    <string name="label_et_project_fee">Upah</string>
    <string name="helper_text_dropdown_category">Masukan kategori project anda. pisahkan dengan koma \",\"</string>
    <string name="label_fab_chat">Chatting</string>
</resources>