<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuBookmark"
        android:title="@string/title_menu_bookmark"
        android:icon="@drawable/ic_bookmark_outlined"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_desc_menu_bookmark" />

    <item
        android:id="@+id/menuChat"
        android:title="@string/title_menu_chat"
        android:icon="@drawable/ic_chat_outlined"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_desc_menu_chat" />

    <item
        android:id="@+id/menuNotification"
        android:title="@string/title_menu_notification"
        android:icon="@drawable/ic_notification_outlined"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_desc_menu_notification" />

</menu>