<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.home.HomeFragment"
        android:label="@string/title_toolbar_home_page"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_createProjectFragment"
            app:destination="@id/createProjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.profile.ProfileFragment"
        android:label="@string/title_toolbar_profile_page"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.detail.DetailFragment"
        android:label="@string/title_toolbar_detail_page"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/createProjectFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.create_project.CreateProjectFragment"
        android:label="@string/title_toolbar_create_job"
        tools:layout="@layout/fragment_create_project" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.chat.ChatFragment"
        android:label="@string/title_toolbar_chat_page"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.history.HistoryFragment"
        android:label="@string/title_toolbar_history_page"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_historyFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="username"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.animebiru.kerjaaja.presentation.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>