<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cdlChangePassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.profile.security.ChangePasswordFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtbChangePassword"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/save_menu"
            app:title="@string/title_toolbar_change_password" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvChangeUsernamePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_container">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlOldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_et_old_password"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_text_et_old_password"
                app:helperTextEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_et_new_password"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_text_et_new_password"
                app:helperTextEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etlOldPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlConfirmNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_et_confirm_new_password"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_text_et_confirm_new_password"
                app:helperTextEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etlNewPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>