<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_blue"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_description_logo_image" />

    <TextView
        android:id="@+id/tvTitleRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/tv_title_register"
        android:textStyle="bold"
        android:textSize="20sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@id/etlUsername"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintBottom_toTopOf="@+id/etlUsername"
        />

    <com.animebiru.kerjaaja.presentation.custom_view.TextEditText
        style="?attr/textInputFilledStyle"
        android:id="@+id/etlUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.8"
        android:hint="@string/label_et_username"
        android:alpha="0"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etlFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.animebiru.kerjaaja.presentation.custom_view.TextEditText>

    <com.animebiru.kerjaaja.presentation.custom_view.TextEditText
        style="?attr/textInputFilledStyle"
        android:id="@+id/etlFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_et_full_name"
        android:alpha="0"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/etlUsername"
        app:layout_constraintLeft_toLeftOf="@id/etlUsername"
        app:layout_constraintRight_toRightOf="@id/etlUsername"
        app:layout_constraintBottom_toTopOf="@id/dropdownGender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.animebiru.kerjaaja.presentation.custom_view.TextEditText>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownGender"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_dropdown_gender"
        android:alpha="0"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/etlFullName"
        app:layout_constraintLeft_toLeftOf="@id/etlUsername"
        app:layout_constraintRight_toRightOf="@id/etlUsername"
        app:layout_constraintBottom_toTopOf="@id/etlPassword">

        <AutoCompleteTextView
            android:id="@+id/acDropdownGender"
            android:text="@string/gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/gender"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.animebiru.kerjaaja.presentation.custom_view.PasswordEditText
        style="?attr/textInputFilledStyle"
        android:id="@+id/etlPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_et_password"
        android:alpha="0"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:endIconMode="password_toggle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/dropdownGender"
        app:layout_constraintLeft_toLeftOf="@id/etlUsername"
        app:layout_constraintRight_toRightOf="@id/etlUsername"
        app:layout_constraintBottom_toTopOf="@id/etlPasswordConfirm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.animebiru.kerjaaja.presentation.custom_view.PasswordEditText>

    <com.animebiru.kerjaaja.presentation.custom_view.PasswordEditText
        style="?attr/textInputFilledStyle"
        android:id="@+id/etlPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_et_password_confirm"
        android:alpha="0"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/etlPassword"
        app:layout_constraintLeft_toLeftOf="@id/etlUsername"
        app:layout_constraintRight_toRightOf="@id/etlUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.animebiru.kerjaaja.presentation.custom_view.PasswordEditText>

    <com.animebiru.kerjaaja.presentation.custom_view.FormButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/label_btn_register"
        android:id="@+id/btnRegister"
        android:alpha="0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etlPasswordConfirm"
        app:layout_constraintLeft_toLeftOf="@id/etlUsername"
        app:layout_constraintRight_toRightOf="@id/etlUsername"/>

</androidx.constraintlayout.widget.ConstraintLayout>